styles/timeline-container.scss
.n-storylines__timeline-container {
	display: flex;
	position: relative;
	width: 100%;
	height: 100px;

	&:before {
		border-top: 1px solid $border;
		content: "";
		margin: 0 auto;
		position: absolute;
		top: 35px;
		width: 100vw;
		left: 50%;
		margin-left: -50vw;
		z-index: -1;
	}

	&--hide-on-mobile {
		@include oGridRespondTo($until: M) {
			display: none;
		}
	}
}

.n-storylines__scroll-container {
	margin: 0 auto;
	position: relative;
	width: 100%;
}

.n-storylines__scroll-segments {
	display: flex;
	@include oGridRespondTo($until: M) {
		position: absolute;
		width: 100vw;
		left: 50%;
		margin-left: -50vw;
		overflow-x: scroll;
	}
}

